# equinoxNet

./: CMakeLists.txt  README.md  connected_layer.c  connected_layer.h  conv_layer.c  conv_layer.h  core.h  custom_math.c  custom_math.h  data.c  data.h  main.c  maxpool_layer.c  maxpool_layer.h  network.c  network.h  softmax_layer.c  softmax_layer.h
